--- a/build.gradle
+++ b/build.gradle
@@ -50,7 +50,7 @@ targetCompatibility = 1.8
 
 final isRelease = Boolean.getBoolean("release")
 final gitVersion = gitVersion().replaceAll(".dirty", "")
-version = isRelease ? gitVersion : gitVersion + "-SNAPSHOT"
+version = isRelease ? gitVersion : gitVersion + "-bamcache-SNAPSHOT"
 
 logger.info("build for version:" + version)
 group = 'com.github.samtools'
